Update project to v2

--- a/src/components/knowledge-card.module.css
+++ b/src/components/knowledge-card.module.css
@@ -45,3 +45,11 @@
   justify-content: center;
   gap: 12px;
 }
+
+/* @media screen and (min-width: 769px) {
+  .knowledgeCard {
+    max-width: 320px;
+    width: 100%;
+  }
+}
+ */
