--- a/src/components/project-card.module.css
+++ b/src/components/project-card.module.css
@@ -1,8 +1,18 @@
-.knowledgeCard {
+.projectCard {
+  max-width: 420px;
+  width: 100%;
+}
+
+.thumbnailWrapper {
+  margin-bottom: 20px;
+  border-radius: 16px;
+  aspect-ratio: 360 / 240;
+  overflow: hidden;
 }
 
 .thumbnail {
-  margin-bottom: 20px;
+  width: 100%;
+  transition: transform 0.3s;
 }
 
 .title {
@@ -20,4 +30,26 @@
 }
 
 .link {
+  color: var(--tundora);
+  font-size: 14px;
+  font-weight: 600;
+  transition: color 0.3s;
+}
+
+@media screen and (min-width: 769px) {
+  .projectCard {
+    max-width: none;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .projectCard:hover .thumbnail,
+  .projectCard:focus-within .thumbnail {
+    transform: scale(1.1);
+  }
+
+  .link:hover,
+  .link:focus-visible {
+    color: var(--mine-shaft);
+  }
 }
