--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -30,4 +30,57 @@
   display: flex;
   align-items: center;
   gap: 16px;
+  height: 100%;
+}
+
+.nav {
+  height: 100%;
+  margin-right: 32px;
+}
+
+.navList {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.navItem {
+  height: 100%;
+}
+
+.navLink {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 16px;
+  color: var(--gray);
+  font-size: 16px;
+  font-weight: 600;
+  transition: color 0.3s;
+}
+
+.navLink:hover,
+.navLink:focus-visible {
+  color: var(--mine-shaft);
+}
+
+.navLink::after {
+  content: '';
+  background-color: var(--crusta);
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  transform: scaleX(0);
+  transition: transform 0.3s;
+}
+
+.isNavLinkActive {
+  color: var(--mine-shaft);
+}
+
+.isNavLinkActive::after {
+  transform: scaleX(1);
 }
