--- a/src/screens/main/main-projects.module.css
+++ b/src/screens/main/main-projects.module.css
@@ -5,6 +5,9 @@
 
 .container {
   composes: container from global;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
@@ -16,8 +19,20 @@
 }
 
 .projects {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 56px;
+}
+
+@media screen and (min-width: 769px) {
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+  }
 }
