--- a/src/components/project-card.module.css
+++ b/src/components/project-card.module.css
@@ -1,10 +1,13 @@
 .projectCard {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   max-width: 420px;
   width: 100%;
 }
 
 .thumbnailWrapper {
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   border-radius: 16px;
   aspect-ratio: 360 / 240;
   overflow: hidden;
@@ -12,44 +15,59 @@
 
 .thumbnail {
   width: 100%;
-  transition: transform 0.3s;
+  transition: transform 0.4s;
 }
 
 .title {
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   color: var(--mine-shaft);
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 600;
 }
 
 .description {
-  margin-bottom: 16px;
+  margin-bottom: 20px;
   color: var(--emperor);
   font-size: 16px;
   font-weight: 400;
 }
 
 .link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0 0 0 calc(12px + 4px);
   color: var(--tundora);
   font-size: 14px;
   font-weight: 600;
-  transition: color 0.3s;
+  transition: 0.6s padding cubic-bezier(0.85, 0, 0.15, 1), 0.3s color;
+}
+
+.icon {
+  position: absolute;
+  left: 0;
+  width: 12px;
+  transition: 0.4s left cubic-bezier(0.85, 0, 0.15, 1);
+}
+
+.projectCard:hover .thumbnail,
+.projectCard:focus-within .thumbnail {
+  transform: scale(1.1);
+}
+
+.link:hover,
+.link:focus-visible {
+  padding: 0 calc(12px + 4px) 0 0;
+  color: var(--mine-shaft);
+}
+
+.link:hover .icon,
+.link:focus-visible .icon {
+  left: calc(100% - 12px);
 }
 
 @media screen and (min-width: 769px) {
   .projectCard {
     max-width: none;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .projectCard:hover .thumbnail,
-  .projectCard:focus-within .thumbnail {
-    transform: scale(1.1);
-  }
-
-  .link:hover,
-  .link:focus-visible {
-    color: var(--mine-shaft);
   }
 }
