--- a/src/screens/main/main-about.module.css
+++ b/src/screens/main/main-about.module.css
@@ -4,9 +4,28 @@
 
 .container {
   composes: container from global;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.detailLeft {
+  position: absolute;
+  top: 64px;
+  left: -88px;
+  max-width: 224px;
+  width: 35%;
+  filter: blur(2px);
+}
+
+.detailRight {
+  position: absolute;
+  top: -36px;
+  right: 8px;
+  max-width: 68px;
+  width: 13%;
+  filter: blur(2px);
 }
 
 .subtitle {
@@ -18,6 +37,7 @@
 }
 
 .title {
+  max-width: 280px;
   margin-bottom: 24px;
   color: var(--mine-shaft);
   font-size: 56px;
@@ -33,6 +53,7 @@
   font-size: 16px;
   font-weight: 400;
   text-align: center;
+  z-index: 1;
 }
 
 .photo {
@@ -40,9 +61,28 @@
   width: 100%;
 }
 
+@media screen and (min-width: 769px) {
+  .detailRight {
+    right: 64px;
+  }
+
+  .title {
+    max-width: none;
+  }
+}
+
 @media screen and (min-width: 1025px) {
   .mainAboutSection {
     padding: calc(64px + var(--header-height)) 0 64px;
+  }
+
+  .detailLeft {
+    top: 48px;
+    left: -72px;
+  }
+
+  .detailRight {
+    top: -52px;
   }
 
   .description {
