--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -62,7 +62,7 @@
   align-items: center;
   height: 100%;
   padding: 0 16px;
-  color: var(--gray);
+  color: var(--dove-gray);
   font-size: 16px;
   font-weight: 600;
   transition: color 0.2s;
