--- a/src/screens/main/main-knowledge.module.css
+++ b/src/screens/main/main-knowledge.module.css
@@ -11,9 +11,15 @@
   gap: 56px;
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .mainKnowledgeSection {
     padding: 64px 0;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .mainKnowledgeSection {
+    padding: 80px 0;
   }
 
   .container {
