--- a/src/screens/main/main-collaboration.module.css
+++ b/src/screens/main/main-collaboration.module.css
@@ -35,9 +35,6 @@
   gap: 48px;
 }
 
-.company {
-}
-
 .companyLink {
   display: flex;
 }
@@ -49,6 +46,10 @@
 }
 
 @media screen and (min-width: 769px) {
+  .mainCollaborationSection {
+    padding: 64px 0 128px;
+  }
+
   .companies {
     flex-direction: row;
     flex-wrap: wrap;
@@ -58,7 +59,7 @@
 
 @media screen and (min-width: 1025px) {
   .mainCollaborationSection {
-    padding: 64px 0 128px;
+    padding: 80px 0 160px;
   }
 
   .companyLink {
