Update project to v9 [ESLint rules; absolute imports; self-hosted fonts; fix image component; fix errors and warnings reported by new ESLint rules]

--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -12,7 +12,7 @@
   --white-rgb: 255, 255, 255;
   --crusta: #f97239;
   --crusta-rgb: 249, 114, 57;
-  --poppins-font: 'x', sans-serif;
+  --poppins-font: 'Poppins', sans-serif;
   --container-width: 1240px;
   --container-padding: 24px;
   --header-height: 72px;
