--- a/src/assets/style/fonts.css
+++ b/src/assets/style/fonts.css
@@ -1,25 +1,25 @@
 @font-face {
-  src: url('../fonts/poppins/poppins-regular.woff2') format('woff2'),
-    url('../fonts/poppins/poppins-regular.woff') format('woff');
-  font-family: 'x';
+  src: url('../fonts/poppins/poppins-400.woff2') format('woff2'),
+    url('../fonts/poppins/poppins-400.ttf') format('truetype');
+  font-family: 'Poppins';
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  src: url('../fonts/poppins/poppins-semi-bold.woff2') format('woff2'),
-    url('../fonts/poppins/poppins-semi-bold.woff') format('woff');
-  font-family: 'x';
+  src: url('../fonts/poppins/poppins-600.woff2') format('woff2'),
+    url('../fonts/poppins/poppins-600.ttf') format('truetype');
+  font-family: 'Poppins';
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  src: url('../fonts/poppins/poppins-bold.woff2') format('woff2'),
-    url('../fonts/poppins/poppins-bold.woff') format('woff');
-  font-family: 'x';
+  src: url('../fonts/poppins/poppins-700.woff2') format('woff2'),
+    url('../fonts/poppins/poppins-700.ttf') format('truetype');
+  font-family: 'Poppins';
   font-weight: 700;
   font-style: normal;
   font-display: swap;
