--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -4,6 +4,7 @@
   padding: 0;
   border: none;
   font-family: var(--poppins-font);
+  line-height: 1.5;
 }
 
 html {
@@ -17,10 +18,6 @@ a {
 button {
   background: none;
   cursor: pointer;
-}
-
-img {
-  height: auto;
 }
 
 ol,
